hello-world/nginx.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world-nginx
  labels:
    app: hello-world-nginx
    tier: frontend
spec:
  containers:
    - name: nginx-hello-world
      image: nginx
      ports:
        - containerPort: 80
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "128Mi"
          cpu: "500m"
