hello-world/nginx.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: default
spec:
  selector:
    app: hello-world-dp-nginx
  type: NodePort
  ports:
  - name: http--hello-world-dp-nginx
    port: 80
    targetPort: 80
    nodePort: 30080
