hello-world/nginx.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-nginx-ingress
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /hello-nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
